Fixing New Policy Button On Mobile

--- a/src/jsx/layouts/nav/Header.module.css
+++ b/src/jsx/layouts/nav/Header.module.css
@@ -2,7 +2,9 @@
   color: #fff !important;
   background-color: #6754e2 !important;
   border-color: #6754e2 !important;
+  margin-left: 1rem;
 }
+
 .btnpurple:hover {
   color: #fff;
   background-color: #6754e2 !important;
@@ -16,3 +18,6 @@
 .textPurple {
   color: #6754e2;
 }
+
+
+
